# nexus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  build.bat  build_nexus.py  build_nexus_msvc.bat  port_seed_bank.py  setup_vcpkg.bat  vcpkg.json  新建文本文档.txt
.github/workflows/: ci.yml  release.yml
CLA/: CCLA.md  ICLA.md  README.md  RLA.md  commercial_license_template.md
binary/: lemma_seed_index.json
docs/: BUILD.md  CONTRIBUTING.md  INTEGRATION.md  IPC_PROTOCOL.md  MODULAR.md  ROADMAP.md  USAGE.md  WHITE_PAPER.md
include/nexus/algo/: audit.h  engine.h  interlock.h  recursor.h  shell_registry.h
include/nexus/bridge/: capability.h  global_memory.h  mcp_client.h  seed_bank.h  seed_buffer.h  seed_channel.h  seed_cultivator.h  sinan.h  willchain.h
include/nexus/coordinator/: dialog.h
include/nexus/core/: block_swapper.h  coq_kernel.h  experience.h  expert_loader.h  gpu_token.h  memory_index.h  meta_axiom_engine.h  meta_kernel.h  native_bridge.h  phase_b.h  proof_cache.h  runtime_manager.h  scheduler.h  thermal_governor.h  vram_manager.h
include/nexus/daemon/: governor.h
include/nexus/env/: chinese_constraint.h
include/nexus/holographic/: holographic_core.h
include/nexus/ipc/: mmap_ringbuf.h  state_file.h
include/nexus/logic/: logic_core.h
include/nexus/psyche/: algo_quantum.h  concept_pathway.h  convergence.h  emergence.h  flow_bridge.h  grid_reasoner.h  holographic.h  meta_axiom.h  navigator.h  observer.h  psi_balancer.h  psi_guard.h  psi_reasoner.h  scoreboard.h  self_evolve.h  self_evolve_trigger.h  semantic_atlas.h  semantic_bridge.h  semantic_cluster.h  semantic_english.h  semantic_expand.h  semantic_flow.h  semantic_port.h  semantic_pos.h  semantic_predicates.h  semantic_senses.h  semantic_slime.h  semantic_tags.h  sophia_core.h
include/nexus/quantum/: quantum_core.h
include/nexus/types/: component_state.h  status.h
include/nexus/utils/: logger.h
packaging/: README.md  export_semantic.py  index_proofs.py
packaging/linux/: install.sh
packaging/windows/: build_package.bat  setup.iss
src/algo/: CMakeLists.txt  audit.cpp  engine_registry.cpp  interlock.cpp  main.cpp  recursor.cpp  shell_registry.cpp
src/algo/engines/: bimcmc_engine.h  dialectical_consensus_engine.h  dre_engine.h  dual_pruning_engine.h  ethical_evaluation_engine.h  hybrid_reasoner_engine.h  infinitas_truth_engine.h  mcmc_engine.h  mtcs_engine.h  multimodal_verifier_engine.h  paper_generation_engine.h  temporal_kg_engine.h
src/algo/subprocess/: CMakeLists.txt  main.cpp
src/bridge/: CMakeLists.txt  capability.cpp  global_memory.cpp  main.cpp  mcp_client.cpp  seed_bank.cpp  seed_buffer.cpp  seed_channel.cpp  seed_cultivator.cpp  sinan.cpp  willchain.cpp
src/coordinator/: CMakeLists.txt  dialog.cpp  main.cpp
src/core/: CMakeLists.txt  block_swapper.cpp  coq_kernel.cpp  experience.cpp  expert_loader.cpp  gpu_token.cpp  main.cpp  memory_index.cpp  meta_axiom_engine.cpp  meta_kernel.cpp  native_bridge.cpp  phase_b.cpp  proof_cache.cpp  runtime_manager.cpp  scheduler.cpp  thermal_governor.cpp  vram_manager.cpp
src/daemon/: CMakeLists.txt  governor.cpp  main.cpp
src/env_checker/: CMakeLists.txt  chinese_constraint.cpp  main.cpp
src/holographic/: CMakeLists.txt  holographic_core.cpp  main.cpp
src/ipc/: mmap_ringbuf.cpp  mmap_ringbuf_posix.cpp  state_file.cpp  state_file_posix.cpp
src/logic/: CMakeLists.txt  logic_core.cpp  main.cpp
src/psyche/: CMakeLists.txt  algo_quantum.cpp  concept_pathway.cpp  convergence.cpp  emergence.cpp  flow_bridge.cpp  grid_reasoner.cpp  holographic.cpp  main.cpp  meta_axiom.cpp  navigator.cpp  observer.cpp  psi_balancer.cpp  psi_guard.cpp  psi_reasoner.cpp  scoreboard.cpp  self_evolve.cpp  self_evolve_trigger.cpp  semantic_atlas.cpp  semantic_bridge.cpp  semantic_cluster.cpp  semantic_english.cpp  semantic_expand.cpp  semantic_flow.cpp  semantic_port.cpp  semantic_pos.cpp  semantic_predicates.cpp  semantic_senses.cpp  semantic_slime.cpp  semantic_tags.cpp  sophia_core.cpp
src/quantum/: CMakeLists.txt  main.cpp  quantum_core.cpp
src/thermal/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test_core/: integration_test.cpp  meta_axiom_test.cpp  mmap_ringbuf_test.cpp  proof_cache_test.cpp  quantum_test.cpp  seed_buffer_test.cpp  state_file_test.cpp  thermal_test.cpp
tests/test_daemon/: state_writer_test.cpp
tests/test_env/: env_checker_test.cpp
tests/test_psyche/: atlas_bridge_test.cpp  flow_test.cpp  grid_test.cpp  observer_test.cpp  pathway_test.cpp  psi_guard_test.cpp  psi_reasoner_test.cpp  senses_slime_test.cpp
