add_executable(core main.cpp)
target_link_libraries(core PRIVATE nexus_ipc nexus_types)
if(NEXUS_USE_VCPKG)
  target_link_libraries(core PRIVATE fmt::fmt nlohmann_json::nlohmann_json spdlog::spdlog)
endif()
if(CUDAToolkit_FOUND)
  target_link_libraries(core PRIVATE CUDA::cuda_driver CUDA::cudart)
  target_compile_definitions(core PRIVATE NEXUS_CUDA_ENABLED)
endif()
install(TARGETS core RUNTIME DESTINATION bin)
